fix typos in the route actions demos

--- a/demo/vaadin-router-route-actions-demos.html
+++ b/demo/vaadin-router-route-actions-demos.html
@@ -51,7 +51,7 @@
         </li>
         <li>
           <code>return commands.prevent()</code> create and return a prevent
-          command.  This command should be returned from the <code>action</code>
+          command. This command should be returned from the <code>action</code>
           to instruct router to stop the current navigation and remain at the
           previous location.
         </li>
@@ -59,7 +59,7 @@
           <code>return commands.component('tag-name')</code> create and return a
           new <code>HTMLElement</code> that will be rendered into the router
           outlet. Using the <code>component</code> command ensures that the
-          created component is initialize as a Vaadin.Router view (i.e. the
+          created component is initialized as a Vaadin.Router view (i.e. the
           <code>location</code> property is set according to the current router
           context.
           <br/>
